styles/globals.css
@import url(https://fonts.googleapis.com/css2?family=Oswald);
/* @import url(http://fonts.cdnfonts.com/css/lulo-clean); */
@font-face {
  font-family: Lulo Clean W01 One Bold;
  src: url("/public/fonts/Lulo Clean W01 One Bold.ttf");
}

html,
body {
  padding: 0;
  margin: 0;
  height: 100vh;
  font-family: Oswald, sans-serif;
  background-image: url("/images/t/background-main.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
}
.ethic {
  background-image: url("/images/accent/Accent-1.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-color: none;
  height: 450px;
  color: #e6dff5;
}
.ethic h2 {
  color: #ffffff;
  margin-bottom: 30px;
}

.ethic p {
  padding: 40px;
}
a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

h3 {
  justify-content: center;
  align-items: center;
  font-size: 36px;
}

p {
  font-family: Avenir, sans-serif;
  font-size: 14px;
}

li {
  font-family: Avenir, sans-serif;
  font-size: 14px;
  list-style-type: none;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding-left: 10%;
  padding-right: 10%;
}

.breadcrumb {
  font-family: Oswald;
  font-size: 1rem;
  padding: 10px;
}

.nextProject {
  position: absolute;
  font-family: Oswald;
  font-size: 1rem;
  margin-right: 10px;
  right: 0px;
}

main {
  min-height: 100vh;
  padding: 1rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.maintext {
  position: absolute;
  padding-left: 10%;
  padding-top: 10%;
  font-family: Lulo Clean One Bold, sans-serif;
}
.maintext h1 {
  color: #ffffff;
  font-family: Lulo Clean One Bold;
}

.strip {
  position: relative;
  width: 100%;
  min-height: 450px;
  box-sizing: border-box;
  background-color: rgba(227, 227, 166, 0.5);
}

.strip h2,
p {
  text-align: center;
}
.strip h2 {
  padding-top: 50px;
}
.innertext p {
  padding-top: 5%;
  padding-left: 10%;
  padding-right: 10%;
  min-width: 320px;
  justify-content: center;
  text-align: center;
}

.logo {
  height: 1em;
  margin-left: 0.5rem;
}

.maingrid {
  display: grid;
  flex-direction: row;
}
.serve {
  height: 500px;
}

/* ===========================================Footer Component */

footer {
  min-height: 300px;
}
footer img {
  margin: 20px;
}
.footerStyle {
  display: flex;
  justify-content: space-around;
  align-content: flex-end;
  flex-direction: row;
  align-items: center;
  background-color: rgba(45, 45, 48, 0.9);
  color: #e6dff5;
  /* padding-top: 50px; */
}
tel {
  justify-content: center;
  align-items: center;
}

/* ===========================================Footer Component */

/* ===========================================Services PAGE */

.services {
  background-color: rgba(255, 255, 255, 0.95);
  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;
}
.services h4 {
  text-transform: none;
  margin-top: 10px;
  margin-bottom: 20px;
  margin-right: 20px;
}
.services div {
  margin-bottom: 5%;
  border-bottom: 50px;
}

.services h1 {
  padding: 20px;
}

.services ul {
  display: flex;
  margin: auto;
  flex-direction: column;
}
/* ===========================================Services PAGE */
/* ===========================================Projects PAGE */

.projects {
  background-color: rgba(255, 255, 255, 0.95);
  display: grid;
  gap: 10px;
}
.projects h1 {
  padding: 20px;
}
.imageP {
  border: 2px solid black;
  margin: 5%;
}

/* ===========================================Projects PAGE */
/* ==============================================About PAGE */

.about {
  background-color: rgba(255, 255, 255, 0.95);
  display: grid;
}
.about h1 {
  padding: 20px;
}

.aboutUp p {
  text-align: left;
}

/* ==============================================About PAGE */
.bio {
  display: grid;
}

.imageB {
  max-width: 320px;
  padding-top: 20px;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.fullname {
  padding: 20px;
}
/* ==============================================About PAGE */
/* =================================Individual Project PAGE */

.projectContainer {
  display: grid;
  background-color: rgba(255, 255, 255, 0.95);
}
.projectContainer h2 {
  padding: 20px;
}

.projectContainer p {
  padding: 20px;
}

.projectContainer img {
  max-width: 320px;
}

/* =================================Individual Project PAGE */

.imagesContainer {
  display: flex;
  gap: 10px;
  flex-direction: row;
  justify-content: center;
  align-content: center;
  flex-wrap: wrap;
}

.imagesContainer img {
  border: 1px solid;
}

.projectLower {
  display: flex;
  flex-direction: column;
  align-content: center;
}
.projectLowerh2 {
  display: flex;
  justify-content: flex-start;
  border: 2px solid #222222;
  margin: 20px;
  background-color: rgba(100, 100, 100, 0.2);
}
.projectLowerp {
  display: flex;
  justify-content: flex-end;
}

